fix: citation for background was hidden by border

--- a/styles.css
+++ b/styles.css
@@ -37,7 +37,7 @@ body {
     margin: 0;
     position: absolute;
     
-    bottom: 4%;
+    bottom: 10%;
     right: 10px;
 }
 #background-citation, #background-citation a{
